Add simple form validations

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "cookie": "^0.4.1",
+    "formik": "^2.2.6",
     "next": "^10.0.5",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
