Add report functionality

--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@blueprintjs/popover2": "^0.2.0",
     "@blueprintjs/select": "^3.15.4",
     "@blueprintjs/table": "^3.8.22",
+    "@devexpress/analytics-core": "^20.2.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "cookie": "^0.4.1",
+    "devexpress-reporting": "^20.2.6",
+    "devextreme": "^20.2.6",
     "formik": "^2.2.6",
+    "jquery-ui": "^1.12.1",
+    "knockout": "^3.5.1",
     "next": "^10.0.5",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
